test_regress/t/t_interface_wrong_bad.out
%Error: t/t_interface_wrong_bad.v:31: Port 'foo_port' expects 'foo_intf' interface but pin connects 'bar_intf' interface
%Error: Exiting due to
